@@ -1,1 +1,0 @@
-(cram (deps %{bin:pml_admin}))
